--- a/app/src/main/res/layout/fraghome.xml
+++ b/app/src/main/res/layout/fraghome.xml
@@ -168,7 +168,7 @@
                             android:layout_marginRight="20dp"
                             android:scaleType="fitCenter"
                             android:background="@color/white"
-                            android:src="@drawable/user1" />
+                            android:src="@drawable/avatar3" />
 
                         <LinearLayout
                             android:layout_width="380dp"
@@ -231,25 +231,7 @@
                     </LinearLayout>
                 </LinearLayout>
 <!--                          오늘의 추천 커뮤니티-->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="240dp"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
-                    android:layout_marginBottom="10dp"
-                    android:background="@drawable/bestback"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/textView4"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginLeft="20dp"
-                        android:textSize="30dp"
-                        android:text="실시간 추천 커뮤니티" />
-                </LinearLayout>
-<!--                    스크롤 광고 이미지 삽입 -->
+                <!--                    스크롤 광고 이미지 삽입 -->
                 <HorizontalScrollView
                     android:layout_width="match_parent"
                     android:layout_marginBottom="100dp"
